--- a/open_me.html
+++ b/open_me.html
@@ -20,8 +20,8 @@
 		Αρχικά παρουσιάζεται η λειτουργία του δικτύου Petri που αναλαμβάνει να χωρίσει 15 φοιτητές σε 5 τριμελής ομάδες με τρόπο που περιγράφεται στην εκφώνηση της εργασίας.
 	</p>
 
-	<a href="" onclick="document.getElementById('gif1').src='images/petri1.gif'">PLAY</a>
-	<a href="" onclick="document.getElementById('gif1').src='images/blank.jpg'">STOP</a>
+	<a href="javascript:;" onclick="document.getElementById('gif1').src='images/petri1.gif'">PLAY</a>
+	<a href="javascript:;" onclick="document.getElementById('gif1').src='images/blank.jpg'">STOP</a>
 	<br>
 	<img src="images/blank.jpg" id="gif1" alt="image" />
 
@@ -31,8 +31,8 @@
 		Με δεδομένο ότι έχουμε χωρίσει τα άτομα στις ομάδες παρακάτω παρουσιάζεται η λειτουργία του δικτύου που προσομοιώνει την διάθεση των αιθουσών στις ομάδες καθώς και την διεξαγωγή του παιχνιδιού.
 	</p>
 
-	<a href="" onclick="document.getElementById('gif2').src='images/petri2.gif'">PLAY</a>
-	<a href="" onclick="document.getElementById('gif2').src='images/blank.jpg'">STOP</a>
+	<a href="javascript:;" onclick="document.getElementById('gif2').src='images/petri2.gif'">PLAY</a>
+	<a href="javascript:;" onclick="document.getElementById('gif2').src='images/blank.jpg'">STOP</a>
 	<br>
 	<img src="images/blank.jpg" id="gif2" alt="image" />
 
