--- a/open_me.html
+++ b/open_me.html
@@ -31,8 +31,8 @@
 		Με δεδομένο ότι έχουμε χωρίσει τα άτομα στις ομάδες παρακάτω παρουσιάζεται η λειτουργία του δικτύου που προσομοιώνει την διάθεση των αιθουσών στις ομάδες καθώς και την διεξαγωγή του παιχνιδιού.
 	</p>
 
-	<a href="javascript:;" onclick="document.getElementById('gif2').src='images/petri2.gif';document.getElementById('gif2').width='824px'">PLAY</a>
-	<a href="javascript:;" onclick="document.getElementById('gif2').src='images/blank.jpg';document.getElementById('gif2').width='700px'">STOP</a>
+	<a href="javascript:;" onclick="document.getElementById('gif2').src='images/petri2.gif'">PLAY</a>
+	<a href="javascript:;" onclick="document.getElementById('gif2').src='images/blank.jpg'">STOP</a>
 	<br>
 	<img src="images/blank.jpg" width="765px"  id="gif2" alt="image" />
 
